env/templates/702-dex-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    provider: fabric8
  name: dex
spec:
  rules:
  - host: dex.infra.jrawlings.co.uk
    http:
      paths:
      - backend:
          serviceName: dex
          servicePort: 80
  tls:
  - hosts:
    - dex.infra.jrawlings.co.uk
    secretName: tls-infra-jrawlings-co-uk
