env/templates/703-nexus-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    provider: fabric8
  name: nexus
spec:
  rules:
  - host: nexus.infra.jrawlings.co.uk
    http:
      paths:
      - backend:
          serviceName: nexus
          servicePort: 80
  tls:
  - hosts:
    - nexus.infra.jrawlings.co.uk
    secretName: tls-infra-jrawlings-co-uk
