env/templates/703-vault-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    provider: fabric8
  name: jx-vault-tekton-mole
spec:
  rules:
  - host: jx-vault-tekton-mole.infra.jrawlings.co.uk
    http:
      paths:
      - backend:
          serviceName: jx-vault-tekton-mole
          servicePort: 8200
  tls:
  - hosts:
    - jx-vault-tekton-mole.infra.jrawlings.co.uk
    secretName: tls-infra-jrawlings-co-uk
